--- a/force-app/main/default/classes/Spoonacular.cls
+++ b/force-app/main/default/classes/Spoonacular.cls
@@ -44,7 +44,7 @@ public with sharing class Spoonacular {
 
     @AuraEnabled
     public static String getRecipeByIngredients(String ingredients){
-        //Changes made
+        //Changes made to sub branch..
         Http http = new Http();
         HttpRequest request = new HttpRequest();
         request.setEndpoint(RECEIPE_API+'/recipes/findByIngredients?ingredients='+ingredients+'&number=10&apiKey='+API_KEY);
